# lwiot-esp8266

./: .gitmodules  CMakeLists.txt
cmake/: esp8266-open-rtos.cmake  esp8266.cmake
esp8266/: CMakeLists.txt  esp8266_ap.cpp  esp8266_station.cpp  esp8266adcchip.cpp  esp8266gpio.h  esp8266gpiochip.cpp  esp8266system.cpp  esp8266uart.cpp  esp8266watchdog.cpp  hardwarei2calgorithm.cpp
esp8266/config/Debug/: sdkconfig  sdkconfig.h
esp8266/config/Release/: sdkconfig  sdkconfig.h
esp8266/include/lwiot/esp8266/: esp8266_ap.h  esp8266_sta.h  esp8266adcchip.h  esp8266gpiochip.h  esp8266i2calgorithm.h  esp8266system.h  esp8266uart.h  esp8266watchdog.h  hardwarei2calgorithm.h
esp8266/soc/: esp8266.c  i2chal.c  wifi.c
tests/esp8266-i2c_test/: Makefile  sdkconfig.old
tests/esp8266-i2c_test/main/: component.mk  main_thread.cpp
tests/esp8266_test/: sdkconfig  sdkconfig.old
tests/esp8266_test/main/: hello_world_main.c  main_thread.cpp
